--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                     <a href="shop.html" class="navlink">Shop</a>
                 </li>
                 <li>
-                    <a href="/src/contact.html" class="navlink">Contact Us</a>
+                    <a href="contact.html" class="navlink">Contact Us</a>
                 </li>
                 </ul>
               </div>
