--- a/src/shop.html
+++ b/src/shop.html
@@ -43,7 +43,7 @@
                     <a href="#" class="navlink">Shop</a>
                 </li>
                 <li>
-                    <a href="#" class="navlink">Contact Us</a>
+                    <a href="contact.html" class="navlink">Contact Us</a>
                 </li>
                 </ul>
             </div>
