links to shop and comments

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <title>YOLO Sentinels Esport Team</title>
 </head>
 <body class="bg-black">
-<!-- Hero section-->
     <section id="home">
+        <!--Navbar-->
         <nav class=" border-b border-primary dark:bg-neutral-950">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
               <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -46,6 +46,7 @@
               </div>
             </div>
           </nav>
+          <!--intro-text-->
         <div class="hero relative container mx-auto h-screen flex items-center">
             <div class="relative mx-auto mt-16 max-w-3xl">
                 <div class="bg-dark-800 p-16 rounded text-center">
@@ -59,6 +60,7 @@
                     </button>
                 </div>
             </div> 
+            <!--video-->
            <div class=" bg-video" >
                 <video class="bg-video_content" autoPlay muted loop>
                     <source src="assets/keyboard.mp4" type="video/mp4" />
@@ -248,13 +250,19 @@
     <section>
         <div class="carousel sm: max-w-4xl container mx-auto mb-16 ">
             <div class="carousel-item">
-                <img src="assets/shop/hoodie_red.jpg" alt="red hoodie">
+                <a href="shop.html">
+                    <img src="assets/shop/hoodie_red.jpg" alt="red hoodie">
+                </a>   
             </div>
             <div class="carousel-item hidden">
-                <img src="assets/shop/tshirt_black.jpg" alt="black tshirt">
+                <a href="shop.html">
+                    <img src="assets/shop/tshirt_black.jpg" alt="black tshirt">
+                 </a>
             </div>
             <div class="carousel-item hidden">
-                <img src="assets/shop/yolo_mousepad2.jpg" alt="mousepad">
+                <a href="">
+                    <img src="assets/shop/yolo_mousepad2.jpg" alt="mousepad">
+                </a>    
             </div>  
             </div>
     </section>
@@ -278,7 +286,7 @@
                         <a href="#results" class="hover:underline me-4 md:me-6">Results</a>
                     </li>
                     <li>
-                      <a href="#" class="hover:underline me-4 md:me-6">Shop</a>
+                      <a href="shop.html" class="hover:underline me-4 md:me-6">Shop</a>
                     </li>
                     <li>
                         <a href="contact.html" class="hover:underline">Contact</a>
