--- a/src/contact.html
+++ b/src/contact.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/yolo_favicon-16x16.png" type="image/x-icon">
-    <title>Document</title>
+    <title>YOLO Contact Page</title>
 </head>
 
 <body class="bg-black">
