--- a/src/shop.html
+++ b/src/shop.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/yolo_favicon-16x16.png" type="image/x-icon">
-    <title>Document</title>
+    <title>YOLO Shop</title>
 </head>
 
 <body class="bg-black">
@@ -16,7 +16,7 @@
 
     
   <!--Navigation-->
-        <nav class=" border-b border-primary dark:bg-neutral-950">
+        <nav class=" border-b border-primary dark:bg-neutral-950 ">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="assets/Yolo_logo_dark.png" class="h-8" alt="Logo" />
@@ -48,10 +48,10 @@
                 </ul>
             </div>
         </nav>
+<!--Shop-grid-->
+        <div class="w-full sm:w-auto sm:mx-20 md:mx-30 my-auto ">
 
-        <div class="w-full sm:w-auto sm:mx-20 md:mx-30s my-auto">
-
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="grid md:grid-cols-2 xl:grid-cols-3 gap-4">
                 <div>
                     <a href="">
                         <img class="h-auto max-w-full rounded-lg" src="assets/shop/hoodie_black.jpg" alt="black hoodie">
